--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/d3Style.css" />
+    <link rel="stylesheet" href="D3_data_journalism/assets/css/style.css" />
+    <link rel="stylesheet" href="D3_data_journalism/assets/css/d3Style.css" />
   </head>
 
   <body>
@@ -82,6 +82,9 @@
     ></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-    <script type="text/javascript" src="assets/js/bonus.js"></script>
+    <script
+      type="text/javascript"
+      src="D3_data_journalism/assets/js/bonus.js"
+    ></script>
   </body>
 </html>
